<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Abdulkerim Yıldırım (kermmyldrm@gmail.com)
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.person.NewPersonFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/menu_top_margin"
            android:layout_marginEnd="@dimen/menu_top_margin"
            android:layout_marginTop="@dimen/menu_top_margin"
            >
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_person_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/group_button_height"
                android:textSize="14sp"
                android:textColor="@color/c_989898"
                android:textColorHint="@color/black"
                android:hint="@string/employeer_edit_name"
                android:inputType="text"
                android:background="@android:color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lineHeight="19dp"/>

            <ImageView
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/c_262525"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/menu_top_margin"
            android:layout_marginEnd="@dimen/menu_top_margin"
            android:layout_marginTop="@dimen/menu_top_margin"
            >
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_person_surname"
                android:layout_width="match_parent"
                android:layout_height="@dimen/group_button_height"
                android:textSize="14sp"
                android:textColor="@color/c_989898"
                android:textColorHint="@color/black"
                android:hint="@string/employeer_edit_surname"
                android:inputType="text"
                android:background="@android:color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lineHeight="19dp"/>

            <ImageView
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/c_262525"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_add_person"
            android:layout_margin="@dimen/menu_top_margin"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/person_add">

        </Button>

        <Button
            android:id="@+id/btn_delete_person"
            android:layout_margin="@dimen/menu_top_margin"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/person_delete">

        </Button>
        <Button
            android:id="@+id/btn_save_list"
            android:layout_margin="@dimen/menu_top_margin"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/save">

        </Button>
    </LinearLayout>
    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ListView>

</LinearLayout>